<resources>
    <!-- 软件基本信息 -->
    <string name="app_name">维一幼儿园</string>
    <string name="app_version" translatable="false">Version</string>
    <string name="app_copyright" translatable="false">&#37073;&#32500;&#19968; &#29256;&#26435;&#25152;&#26377;\nCopyright &#169; 2018-2026 zhengweiyi.cn\nAll Rights Reserved</string>
    <string name="app_powered_by" translatable="false">Icon by &#23567;&#33651; &#38; &#31481;&#23572;</string>

    <!-- 显示文本 -->
    <string name="activity_code_title">二维码</string>
    <string name="button_insert_test_data">添加测试数据</string>
    <string name="calendar_today">今天</string>
    <string name="dietary_list">食谱</string>
    <string name="function_pickup">安全接送</string>
    <string name="function_dietary">每日食谱</string>
    <string name="function_manage_info">信息管理</string>
    <string name="function_manage_class">班级管理</string>
    <string name="function_other">其他功能</string>
    <string name="grid_text">功能名称</string>
    <string name="list_child">我的孩子</string>
    <string name="list_phone">我的手机</string>
    <string name="list_setting">软件设置</string>
    <string name="list_about">关于</string>
    <string name="menu_scanner">扫一扫</string>
    <string name="pickup_pick_up">接孩子</string>
    <string name="pickup_send">送孩子</string>
    <string name="pickup_history">接送记录</string>
    <string name="pickup_pick_up_time">接孩子时间</string>
    <string name="pickup_send_time">送孩子时间</string>
    <string name="recycler_null">没有获取到数据</string>
    <string name="recycler_null_error">数据有误</string>
    <string name="tab_home">幼儿</string>
    <string name="tab_me">我的</string>
    <string name="verify">实名认证</string>

    <!-- 描述文字 -->
    <string name="app_logo" translatable="false">LOGO</string>
    <string name="grid_image">功能图标</string>
    <string name="list_icon">列表图标</string>
    <string name="list_icon_right">进入图标</string>
    <string name="list_child_value">孩子姓名</string>
    <string name="list_phone_value">手机号码</string>
    <string name="notice_icon">公告图标</string>
    <string name="user_name">未登录</string>

    <!-- 默认提示文字 -->
    <string name="notice_hint">公告加载中或暂无公告</string>

    <!-- 弹出提示文本 -->
    <string name="click">点击了</string>
    <string name="click_calendar_month">再次点击进入年视图</string>
    <string name="coming_soon">敬请期待</string>
    <string name="page_updated">页面已更新</string>
    <string name="title_activity_settings">Settings</string>

    <!-- 设置菜单相关 Strings related to Settings -->

    <!-- 通用设置 General settings -->

    <string name="pref_title_language">多语言</string>
    <string-array name="pref_language_list_titles">
        <item>跟随系统</item>
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_data_sync">数据同步</string>
    <string name="pref_header_general">通用</string>

</resources>
