<!--
  ~ Copyright (c) 2019. zhengweiyi.cn all rights reserved
  ~ 郑维一版权所有，未经授权禁止使用，开源项目请遵守指定的开源协议
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="cn.zhengweiyi.weiyichild.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="cn.zhengweiyi.weiyichild.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="cn.zhengweiyi.weiyichild.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
