<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. zhengweiyi.cn all rights reserved
  ~ 郑维一版权所有，未经授权禁止使用，开源项目请遵守指定的开源协议
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            app:navigationIcon="@drawable/ic_left"
            app:title=""/>

    </android.support.design.widget.AppBarLayout>

        <cn.zhengweiyi.weiyichild.custom.view.RoundAngleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_spacing_large"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/app_name"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_spacing"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size_about_app_name"
            android:textColor="@color/colorTextBlack"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/colorTextBlack"
            android:text="@string/app_version"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textCopyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/view_spacing"
        android:textSize="@dimen/text_size_default"
        android:text="@string/app_powered_by"/>

    <TextView
        android:id="@+id/textCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/view_spacing_large"
        android:gravity="center_horizontal"
        android:text="@string/app_copyright"/>

</RelativeLayout>