<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGroundGrey"
    tools:context=".fragment.MyFragment"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/layoutUserInfo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_username_height"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorBackGroundWhite"
            android:orientation="horizontal"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            android:baselineAligned="false"
            tools:ignore="OnClick"> <!-- TODO 解决onClick报错 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:duplicateParentState="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:text="@string/user_name"
                    android:textSize="@dimen/text_size_title_large" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutListVerify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_height"
            android:orientation="horizontal"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/layout_select_background"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            tools:ignore="OnClick">

            <ImageView
                android:layout_width="@dimen/image_icon_list"
                android:layout_height="@dimen/image_icon_list"
                android:layout_gravity="center_vertical"
                android:duplicateParentState="true"
                android:contentDescription="@string/list_icon"
                android:src="@drawable/ic_verify" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/view_spacing"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:text="@string/verify"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_size_list" />

            <ImageView
                android:layout_width="@dimen/image_icon_list_right"
                android:layout_height="@dimen/image_icon_list_right"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/list_icon_right"
                android:duplicateParentState="true"
                android:src="@drawable/ic_right"
                android:tint="@color/colorListIconRight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/layoutListMyChild"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_height"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/layout_select_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:orientation="horizontal"
                tools:ignore="OnClick">

                <ImageView
                    android:layout_width="@dimen/image_icon_list"
                    android:layout_height="@dimen/image_icon_list"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:contentDescription="@string/list_icon"
                    android:src="@drawable/ic_list_child" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/view_spacing"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:text="@string/list_child"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:text="@string/list_child_value"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutListPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_height"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/layout_select_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:orientation="horizontal"
                tools:ignore="OnClick">

                <ImageView
                    android:layout_width="@dimen/image_icon_list"
                    android:layout_height="@dimen/image_icon_list"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:contentDescription="@string/list_icon"
                    android:src="@drawable/ic_list_phone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/view_spacing"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:text="@string/list_phone"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:text="@string/list_phone_value"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/layoutListSetting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_height"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/layout_select_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:orientation="horizontal"
                tools:ignore="OnClick">

                <ImageView
                    android:layout_width="@dimen/image_icon_list"
                    android:layout_height="@dimen/image_icon_list"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:contentDescription="@string/list_icon"
                    android:src="@drawable/ic_list_setting" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/view_spacing"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:text="@string/list_setting"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_list" />

                <ImageView
                    android:layout_width="@dimen/image_icon_list_right"
                    android:layout_height="@dimen/image_icon_list_right"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:contentDescription="@string/list_icon_right"
                    android:src="@drawable/ic_right"
                    android:tint="@color/colorListIconRight" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutListAbout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_height"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/layout_select_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:orientation="horizontal"
                tools:ignore="OnClick">

                <ImageView
                    android:layout_width="@dimen/image_icon_list"
                    android:layout_height="@dimen/image_icon_list"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:contentDescription="@string/list_icon"
                    android:src="@drawable/ic_list_info" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/view_spacing"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:text="@string/list_about"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_list" />

                <ImageView
                    android:layout_width="@dimen/image_icon_list_right"
                    android:layout_height="@dimen/image_icon_list_right"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:contentDescription="@string/list_icon_right"
                    android:src="@drawable/ic_right"
                    android:tint="@color/colorListIconRight" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>