<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. zhengweiyi.cn all rights reserved
  ~ 郑维一版权所有，未经授权禁止使用，开源项目请遵守指定的开源协议
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PickupActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themeDark"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            app:contentInsetStartWithNavigation="@dimen/view_spacing"
            app:navigationIcon="@drawable/ic_left_light"
            app:theme="@style/MyToolbarThemePrimary"
            app:title="@string/function_pickup">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_pickup_button_height"
        android:background="@color/themeDark"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/layout_pickup_button_image"
                android:layout_height="@dimen/layout_pickup_button_image"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/pickup_pick_up"
                android:src="@drawable/ic_scanner"
                android:tint="@color/colorTextLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/pickup_pick_up"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/text_size_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/layout_pickup_button_image"
                android:layout_height="@dimen/layout_pickup_button_image"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/pickup_send"
                android:src="@drawable/ic_qrcode"
                android:tint="@color/colorTextLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/pickup_send"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/text_size_default" />

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>